--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "apexcharts": "^3.41.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
