--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/jost": "^4.5.13",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "^5.14.5",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -22,6 +23,8 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "json-server": "^0.17.3",
+    "material-table": "^2.0.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-pagination-control": "^1.0.5",
@@ -32,7 +35,8 @@
     "react-select": "^5.7.0",
     "react-table-css-unit": "^0.1.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
