--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.14.5",
+    "@mui/x-date-pickers": "^6.11.2",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -23,6 +24,7 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.9",
     "json-server": "^0.17.3",
     "material-table": "^2.0.5",
     "react": "^18.2.0",
