--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/jost": "^4.5.13",
@@ -25,12 +26,16 @@
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.9",
+    "firebase": "^10.7.0",
     "json-server": "^0.17.3",
     "material-table": "^2.0.5",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-pagination-control": "^1.0.5",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
